tests/golden/builtin/builtin/builtin/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    monitoring.syn.tools/monitoring: 'true'
    name: syn-builtin
    test: testing
  name: syn-builtin
