tests/golden/builtin/builtin/builtin/40_netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: prometheus-syn-synsights-to-keycloak
  name: prometheus-syn-synsights-to-keycloak
  namespace: syn-builtin
spec:
  egress: []
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: syn-synsights
          podSelector:
            matchLabels:
              app: prometheus
      ports:
        - port: 9990
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/name: keycloak
  policyTypes:
    - Ingress
